	PR c++/58511 	* semantics.c (is_instantiation_of_constexpr): Return true for 	defaulted functions, too. 	(explain_invalid_constexpr_fn): Only use 	explain_implicit_non_constexpr if !DECL_DECLARED_CONSTEXPR_P. 	* method.c (explain_implicit_non_constexpr): Pass 	DECL_INHERITED_CTOR_BASE to explain_implicit_non_constexpr.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@212507 138bc75d-0d04-0410-961f-82ee72b054a4